<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.order.ViewOrderFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="10dp"
                android:text="@string/orderNumberText"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/blackColor"
                android:textSize="36sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/orderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackColor"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="@string/placeholderOrderId" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorWhite"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    android:src="@drawable/ic_date_range_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visit_range_text"
                        android:textColor="@color/blackColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/visit_time_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/placeholder_visit_time_start" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/split" />

                        <TextView
                            android:id="@+id/visit_time_end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/placeholder_visit_time_end" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorWhite"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    android:src="@drawable/ic_order_status_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orderStateText"
                        android:textColor="@color/blackColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/order_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/placeholderOrderState" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorWhite"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    android:src="@drawable/ic_person_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_person_text"
                        android:textColor="@color/blackColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/order_person"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/placeholder_order_person" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorWhite"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    android:src="@drawable/ic_restaurant_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_address_text"
                        android:textColor="@color/blackColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/restaurant_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/placeholder_restaurant_address" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorWhite"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    android:src="@drawable/ic_people_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/persons_count_text"
                        android:textColor="@color/blackColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/persons_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/placeholder_persons_count" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorWhite"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    android:src="@drawable/ic_seat_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_table_text"
                        android:textColor="@color/blackColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/order_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/placeholder_order_table" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorWhite"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    android:src="@drawable/ic_payment_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_payment_amount_text"
                        android:textColor="@color/blackColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/order_payment_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/placeholder_order_payment_amount" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:paddingTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:enabled="false"
                android:text="@string/show_order_check" />

            <Button
                android:id="@+id/order_work_button"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:text="@string/notify_client_about_oder_ready" />
        </LinearLayout>

        <LinearLayout
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingTop="30dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_menu_text"
                android:textColor="@color/blackColor"
                android:textSize="18sp"
                android:textStyle="bold" />

        <ListView
            android:paddingStart="10dp"
            android:paddingEnd="50dp"
            tools:listitem="@layout/order_menu_item_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>